# YaLafi-LS

./: .pylintrc  HISTORY.md  NOTICE  README.md  pyproject.toml
.github/workflows/: prepare-release.yml  publish-release.yml
yalafi_ls/: __init__.py  __main__.py  server.py
